--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "js-cookie": "^3.0.0",
+    "mongoose": "^5.13.7",
     "next": "11.1.0",
+    "next-connect": "^0.10.2",
+    "npm": "^7.21.0",
     "react": "17.0.2",
+    "react-dispatch": "^1.2.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
