--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "bootstrap": "^4.1.1",
     "js-cookie": "^3.0.0",
     "mongoose": "^5.13.7",
     "next": "11.1.0",
     "next-connect": "^0.10.2",
     "npm": "^7.21.0",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dispatch": "^1.2.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
