--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
-    "bootstrap": "^4.1.1",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.6.0",
     "js-cookie": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "next": "11.1.0",
     "next-connect": "^0.10.2",
