--- a/package.json
+++ b/package.json
@@ -12,22 +12,28 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "axios-error": "^1.0.4",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.0",
+    "events": "^3.3.0",
     "js-cookie": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "next": "11.1.0",
     "next-connect": "^0.10.2",
+    "notistack": "^1.0.10",
     "npm": "^7.21.0",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dispatch": "^1.2.0",
     "react-dom": "17.0.2",
+    "react-dropdown": "^1.9.2",
+    "react-hook-form": "^7.13.0",
     "redux": "^4.1.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.7",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0"
   }
