--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@react-google-maps/api": "^2.2.0",
     "axios": "^0.21.1",
     "axios-error": "^1.0.4",
     "bcrypt": "^5.0.1",
